--- a/ComponentDev/CMakeLists.txt
+++ b/ComponentDev/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.8)
 
-include_directories(../ComponentCore)
+include_directories(../ComponentCore/inc)
 
 file(GLOB DEV_SOURCES "*.cpp")
 
@@ -13,6 +13,7 @@ endif()
 add_executable(CompentDev ${DEV_SOURCES})
 target_link_libraries(CompentDev ComponentCore)
 
+set_target_properties(CompentDev PROPERTIES COMPILE_FLAGS "/EHsc")
 set_target_properties(CompentDev PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
 set_target_properties(CompentDev PROPERTIES OUTPUT_NAME CompentDev)
 #set_target_properties(CompentDev PROPERTIES ENABLE_EXPORTS True)
