添加RELEASE MT编译属性

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,26 @@ project(ComponentDev VERSION 1.0.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+if(MSVC)
+	set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "" FORCE)
+	#runtime library
+	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd /Zi")
+	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT /Zi")
 
+	set(CMAKE_GENERATOR_PLATFORM Win32)
+
+	#pdb 
+	#set(CMAKE_SHARED_LINKER_FLAGS_DEBUG "${CMAKE_SHARED_LINKER_FLAGS_DEBUG} /DEBUG /OPT:REF /OPT:ICF")
+	#set(CMAKE_SHARED_LINKER_FLAGS_RELEASE "${CMAKE_SHARED_LINKER_FLAGS_RELEASE} /DEBUG /OPT:REF /OPT:ICF")
+
+# generate zero_check
+#set(CMAKE_SUPPRESS_REGENERATION FALSE)
+endif()	
 # default user option
 option(ENABLE_TEST "Enable test" ON)
 
 if(ENABLE_TEST)
-  add_definitions(-DENABLE_TEST -DWIN32 -D_CRT_SECURE_NO_WARNINGS)
+  add_definitions(-DENABLE_TEST -D_CRT_SECURE_NO_WARNINGS)
 endif()
 
 # set msvc info
