--- a/ComDllTest/CMakeLists.txt
+++ b/ComDllTest/CMakeLists.txt
@@ -5,22 +5,24 @@ include_directories(../ComponentCore/inc)
 
 file(GLOB DEV_SOURCES "*.cpp")
 
-if(WIN32)
+if(MSVC)
     set(EXECUTABLE_FILE_NAME "ComDllTest.dll")
     set(EXECUTABLE_FILE_DESCRIPTION "${PRODUCT_NAME} agent")
-
 endif()
 
 
 add_library(ComDllTest SHARED ${DEV_SOURCES})
 target_link_libraries(ComDllTest ComponentCore)
 
-set_target_properties(ComDllTest PROPERTIES COMPILE_FLAGS "/EHsc")
+if(MSVC)
+    set_target_properties(ComDllTest PROPERTIES COMPILE_FLAGS "/EHsc")
+endif()
+
 set_target_properties(ComDllTest PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
 set_target_properties(ComDllTest PROPERTIES OUTPUT_NAME ComDllTest)
 set_target_properties(ComDllTest PROPERTIES ENABLE_EXPORTS True)
 
-if (WIN32)
+if (MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W3")
     target_compile_definitions(ComDllTest PUBLIC SERVICE_NAME="Nack Test Dev")
     add_definitions(-DWIN32_LEAN_AND_MEAN)
