--- a/ComponentCore/CMakeLists.txt
+++ b/ComponentCore/CMakeLists.txt
@@ -2,11 +2,15 @@ cmake_minimum_required(VERSION 3.16)
 
 #project(ComponentDev VERSION 0.14.0)
 include_directories(../yaml-cpp-src/include ./inc)
+if(MSVC)
 link_directories(../yaml-cpp-src/build/)
+else()
+link_directories(../yaml-cpp-src/build_linux/)
+endif()
 
 file(GLOB DEV_SOURCES "src/*.cpp")
 
-if(WIN32)
+if(MSVC)
     set(EXECUTABLE_FILE_NAME "ComponentCore.dll")
     set(EXECUTABLE_FILE_DESCRIPTION "${PRODUCT_NAME} agent")
 endif()
@@ -14,12 +18,16 @@ endif()
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 set(BUILD_SHARED_LIBS ON)
 #add_library(${DEV_SOURCES} ${RUNTIME_OUTPUT_DIRECTORY}/exports.def)
-add_library(ComponentCore SHARED ${DEV_SOURCES})
-target_link_libraries(ComponentCore PRIVATE yaml-cppd.lib)
 
-if(WIN32)
-	set_target_properties(ComponentCore PROPERTIES COMPILE_FLAGS "/EHsc")
+add_library(ComponentCore SHARED ${DEV_SOURCES})
+
+if(MSVC)
+    target_link_libraries(ComponentCore PRIVATE yaml-cppd.lib)
+    set_target_properties(ComponentCore PROPERTIES COMPILE_FLAGS "/EHsc")
+else()
+    target_link_libraries(ComponentCore PRIVATE yaml-cpp)
 endif()
+
 
 set_target_properties(ComponentCore PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
 set_target_properties(ComponentCore PROPERTIES OUTPUT_NAME ComponentCore)
