--- a/TestDll/CMakeLists.txt
+++ b/TestDll/CMakeLists.txt
@@ -4,7 +4,7 @@ include_directories(../ComponentCore/inc)
 #link_directories(${CMAKE_BINARY_DIR})
 file(GLOB DEV_SOURCES "*.cpp")
 
-if(WIN32)
+if(MSVC)
     set(EXECUTABLE_FILE_NAME "TestDll.dll")
     set(EXECUTABLE_FILE_DESCRIPTION "${PRODUCT_NAME} agent")
 
@@ -13,12 +13,15 @@ endif()
 add_library(TestDll SHARED ${DEV_SOURCES})
 target_link_libraries(TestDll ComponentCore)
 
-set_target_properties(TestDll PROPERTIES COMPILE_FLAGS "/EHsc")
+if(MSVC)
+    set_target_properties(TestDll PROPERTIES COMPILE_FLAGS "/EHsc")
+endif()
+
 set_target_properties(TestDll PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
 set_target_properties(TestDll PROPERTIES OUTPUT_NAME TestDll)
 #set_target_properties(TestDll PROPERTIES ENABLE_EXPORTS True)
 
-if (WIN32)
+if (MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W3")
     target_compile_definitions(TestDll PUBLIC SERVICE_NAME="Nack Test Dev")
     add_definitions(-DWIN32_LEAN_AND_MEAN)
