修改编译警告，以及相关编译文件，实现自动搜索

--- a/ComDllTest/CMakeLists.txt
+++ b/ComDllTest/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.8)
 #project(ComponentDev VERSION 0.14.0)
-include_directories(../ComponentCore/inc)
+#include_directories(../ComponentCore/inc)
 #link_directories(${CMAKE_BINARY_DIR})
 
 file(GLOB DEV_SOURCES "*.cpp")
@@ -20,7 +20,7 @@ endif()
 
 set_target_properties(ComDllTest PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
 set_target_properties(ComDllTest PROPERTIES OUTPUT_NAME ComDllTest)
-set_target_properties(ComDllTest PROPERTIES ENABLE_EXPORTS True)
+#set_target_properties(ComDllTest PROPERTIES ENABLE_EXPORTS True)
 
 if (MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W3")
