修改msvc编译错误，完成linux，windows编译

--- a/ComponentCore/CMakeLists.txt
+++ b/ComponentCore/CMakeLists.txt
@@ -3,9 +3,9 @@ cmake_minimum_required(VERSION 3.16)
 include_directories(./inc)
 
 if (MSVC)
-set(COMCORE_LIB_PATH "${CMAKE_CURRENT_BINARY_DIR}/ComponentCore.lib")
+    set(COMCORE_LIB_PATH "${CMAKE_CURRENT_BINARY_DIR}/ComponentCore.lib")
 else()
-set(COMCORE_LIB_PATH "${CMAKE_CURRENT_BINARY_DIR}/ComponentCore")
+    set(COMCORE_LIB_PATH "${CMAKE_CURRENT_BINARY_DIR}/ComponentCore")
 endif()
 
 file(GLOB DEV_SOURCES "src/*.cpp")
@@ -23,7 +23,7 @@ set(BUILD_SHARED_LIBS ON)
 add_library(ComponentCore SHARED ${DEV_SOURCES})
 
 if(MSVC)
-    target_link_libraries(ComponentCore PRIVATE yaml-cppd.lib)
+    target_link_libraries(ComponentCore PRIVATE yaml-cpp)
     set_target_properties(ComponentCore PROPERTIES COMPILE_FLAGS "/EHsc")
 else()
     target_link_libraries(ComponentCore PRIVATE yaml-cpp)
